<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textViewRecorde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:background="#4DFFFFFF"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/recorde_inicial"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/buttonIniciar"
        style="@style/BotaoAzul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        android:text="@string/botao_iniciar_jogo"
        android:padding="16dp"/>

    <Button
        android:id="@+id/buttonIniciarHardcore"
        style="@style/BotaoAzul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxWidth="300dp"
        android:text="@string/botao_iniciar_hardcore"
        android:padding="16dp"/>

    <Button
        android:id="@+id/buttonHistorico"
        style="@style/BotaoAzulContorno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxWidth="300dp"
        android:text="@string/botao_historico" />

</LinearLayout>