<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRaizJogo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context=".JogoActivity"
    tools:background="@color/dark_blue_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewPontuacao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jogo_pontos"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textViewTempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jogo_tempo"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewAlvo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/alvo_circulo"
        android:contentDescription="@string/cd_alvo_do_jogo"
        android:visibility="invisible"
        tools:visibility="visible"
        tools:layout_centerInParent="true"/>

</RelativeLayout>